src/test/resources/Parser/SyntaxErrors/NonOptionalExMark.front
class A:
    fun(int32 a) {
        a!;
    }